# DeviceReceiver

./: .gitignore  AGENTS.md  AppConfig.cpp  AppConfig.h  ApplicationController.cpp  ApplicationController.h  ArrayPlotWindow.cpp  ArrayPlotWindow.h  ArrayRgbHeatmapWindow.cpp  ArrayRgbHeatmapWindow.h  CLAUDE.md  CMakeLists.txt  DECISIONS.md  DataCacheManager.cpp  DataCacheManager.h  DataExporter.cpp  DataProcessor.cpp  FrameData.h  GrpcEndpointUtils.h  GrpcReceiverBackend.cpp  GrpcReceiverBackend.h  HeatMapPlotWindow.cpp  HeatMapPlotWindow.h  HistoryDataProvider.cpp  HistoryDataProvider.h  HistoryExportService.cpp  HistoryExportService.h  HistoryImportService.cpp  HistoryImportService.h  HistoryOverviewWindow.cpp  HistoryOverviewWindow.h  InspectionPlotWindow.cpp  InspectionPlotWindow.h  MainWindow.cpp  MainWindow.h  MinMaxBucketSampler.h  PlotDataHub.cpp  PlotDataHub.h  PlotWindow.cpp  PlotWindow.h  (+31 more)
.cursor/rules/: 00-governance.mdc  10-engineering.mdc  11-project-arch.mdc  99-self-check.mdc
.cursor/skills/self-heal/: SKILL.md
.github/workflows/: windows-msvc2019-qt5152-ci.yml
3rd_qcustomplot/3rd_qcustomplot/v2_1/: qcustomplot.cpp
docs/: BUILD_OUTPUT_PATHS.md  CI_WINDOWS.md  ngrok_manual_install_zh.html
docs/阵列涡流检测设备热力图/: display_aligned_20260409_152317.csv  untitled.m  画图说明.docx
files/css/: darkStyle.css  lightStyle.css  toolBar_dark.css  toolBar_light.css
proto/: device.proto  display_aligned_20260327_171739.csv
proto/generated_py/: device_pb2.py  device_pb2_grpc.py  stage_pb2.py  stage_pb2_grpc.py
scripts/: README_stage_tunnel.md  check_grpc_endpoint.bat  check_grpc_endpoint.py  export_and_validate_aligned_sql.py  migrate_sql_to_aligned.py  probe_device_grpc.py  run_stage_tests.py  start_stage_with_ngrok.bat  start_stage_with_ngrok.ps1
tests/: CMakeLists.txt  stage_integration_test.cpp  stage_test_paths.h.in  tst_stage_panel.cpp
tests/e2e/: conftest.py  requirements.txt  test_stage_e2e_optional.py
tests/fixtures/: config.ini
